added WebSocket Lobby Integration Test, added Ranklist and Avatar Request
