# src/main/java/com/mythostrike/controller/AuthenticationController.java
@@ -3,6 +3,7 @@ package com.mythostrike.controller;
 import com.mythostrike.account.repository.User;
 import com.mythostrike.account.service.TokenService;
 import com.mythostrike.account.service.UserService;
+import com.mythostrike.controller.message.authentication.ChangeAvatarRequest;
 import com.mythostrike.controller.message.authentication.UserAuthRequest;
 import com.mythostrike.controller.message.authentication.UserAuthResponse;
 import jakarta.persistence.EntityExistsException;
@@ -12,6 +13,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.Mapping;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -19,6 +21,8 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.security.Principal;
+import java.util.Comparator;
+import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
@@ -63,13 +67,36 @@ public class AuthenticationController {
             user = userService.getUser(principal.getName());
         } catch (EntityNotFoundException e) {
             log.error("user not found: '{}'", principal.getName());
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found!");
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User '" + principal.getName() + "' not found!");
         }
         return ResponseEntity.ok(user);
     }
 
-    @GetMapping
-    public String home() {
-        return "Hello, ";
+    @PostMapping("/avatar")
+    public ResponseEntity<Void> selectAvatar(Principal principal, @RequestBody ChangeAvatarRequest request) {
+        log.debug("select Avatar '{}' request from '{}'", request.avatarNumber(), principal.getName());
+        User user;
+        try {
+            user = userService.getUser(principal.getName());
+        } catch (EntityNotFoundException e) {
+            log.error("user not found: '{}'", principal.getName());
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User '" + principal.getName() + "' not found!");
+        }
+
+        user.setAvatarNumber(request.avatarNumber());
+        userService.saveUser(user);
+
+        return ResponseEntity.status(HttpStatus.OK).build();
     }
+
+    @GetMapping("/ranklist")
+    public ResponseEntity<List<User>> getRankList() {
+        log.debug("get Ranklist request");
+
+        List<User> users = userService.getAllUsers();
+        List<User> sortedUsers = users.stream().sorted(Comparator.comparingInt(User::getRankPoints)).toList();
+
+        return ResponseEntity.ok(sortedUsers);
+    }
+
 }
