# src/main/java/com/mythostrike/controller/message/authentication/ChangeAvatarRequest.java
@@ -1,0 +1,5 @@
+package com.mythostrike.controller.message.authentication;
+
+public record ChangeAvatarRequest(int avatarNumber) {
+
+}
